Fix spacing at the bottom of the section element

--- a/src/styles.css
+++ b/src/styles.css
@@ -251,6 +251,7 @@ main {
 }
 
 section {
+  display: flex;
   width: 100%;
 }
 
